Refactor project structure and branch organization
- Remove old_codebase/ from repository (added to .gitignore)
- Change output directory from results/ to output/
- Update progress tracker to use output/ directory
- Add old_codebase/ to .gitignore for local reference
- Update README to reflect new structure
- Prepare for main branch migration

--- a/.gitignore
+++ b/.gitignore
@@ -46,12 +46,15 @@ env/
 .Trashes
 ehthumbs.db
 Thumbs.db
+
 # Project specific
-results/*.json
+output/
 models/*.gguf
-models/*.bin
-logs/
+models/*.binlogs/
 *.log
+
+# Old reference codebase
+old_codebase/
 
 # Testing
 .coverage
