Update .gitignore to allow output directory structure
- Allow output/README.md to be tracked
- Ignore only output/*.json files (actual results)
- Maintain directory structure in repository

--- a/.gitignore
+++ b/.gitignore
@@ -47,8 +47,8 @@ env/
 ehthumbs.db
 Thumbs.db
 
-# Project specific
-output/
+# Project specific - output files but not directory structure
+output/*.json
 models/*.gguf
 models/*.binlogs/
 *.log
