--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -11,3 +11,8 @@ pyyaml>=6.0
 tqdm>=4.65.0
 click>=8.1.0
 python-dotenv>=1.0.0
+# Web interface dependencies
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+aiofiles>=23.2.0
+pydantic>=2.5.0
