feat: Phase 3 - Vue.js Frontend Foundation
🎨 Modern Vue.js Application:
- Vue 3.5.0 with Composition API and Vite 6.0.0 build system
- Tailwind CSS 3.4.0 for responsive, modern styling
- Production build optimization (~140KB gzipped)

🧭 Navigation & Layout:
- Clean header with app status and validation controls
- Sidebar navigation with page routing
- Responsive design for desktop, tablet, and mobile
- Real-time status indicators for API connections

📊 Dashboard Interface:
- Status cards showing configuration, API, models, and prompts overview
- Live API connection status with latency metrics
- Model validation results display
- Auto-validation on app load

🏗️ Technical Architecture:
- Pinia 2.3.0 for reactive state management
- Axios 1.7.0 HTTP client with error handling
- Vue Router 4.4.0 for client-side routing
- Component-based design with reusable StatusCard

🔧 Configuration Pages (Foundation):
- Models configuration page ready for implementation
- Prompts management page prepared
- Evaluation runner page foundation
- Results display page structure

🛠️ Development Tools:
- dev-server.sh script to run both frontend and backend
- Optimized Vite configuration with API proxy
- Updated .gitignore for frontend dependencies
- Hot reload development environment

🎯 API Integration:
- Seamless integration with FastAPI backend
- Real-time validation status updates
- Error handling with user-friendly messages
- 30-second timeout protection

Ready for Phase 4: Interactive Configuration Management

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Frontend dependencies and build artifacts
+/frontend/node_modules/
+/frontend/dist/
+/frontend/.env.local
+/frontend/.env.*.local
+/frontend/npm-debug.log*
+/frontend/yarn-debug.log*
+/frontend/yarn-error.log*
+
 # Python
 __pycache__/
 *.py[cod]
@@ -22,21 +31,17 @@ wheels/
 MANIFEST
 
 # Virtual environments
-venv/
-venv-*/
+venv-storybench/
+.venv/
 ENV/
 env/
-.venv
+venv/
 
-# Environment variables
-.env
-
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
 # OS
 .DS_Store
@@ -47,19 +52,17 @@ env/
 ehthumbs.db
 Thumbs.db
 
-# Project specific - output files but not directory structure
-output/*.json
-models/*.gguf
-models/*.binlogs/
+# Project specific
+.env
+output/
+models/
 *.log
-
-# Old reference codebase
-old_codebase/
 
 # Testing
 .coverage
 .pytest_cache/
 .tox/
+.coverage.*
 htmlcov/
 
 # Documentation
