Phase 4 complete: Interactive Configuration Management + Selenium Testing
✅ Fixed JavaScript syntax errors in Vue components
✅ Implemented working Models Configuration interface
✅ Implemented working Prompts Management interface
✅ Added comprehensive Selenium test framework
✅ Updated requirements with testing dependencies
✅ Created automated test runner script

Features:
- Models Config: Global settings, API key management, model configuration
- Prompts Config: Sequence management, version tracking, data loading
- Selenium Tests: Firefox-based automated UI testing
- API Health Tests: Backend connectivity verification
- Test Runner: Automated test execution script

Testing:
- API health tests: ✅ Passing
- Selenium smoke tests: ✅ Passing
- Frontend loads successfully: ✅ Confirmed
- Backend integration: ✅ Working

Ready for Phase 5: Evaluation Engine Integration

--- a/src/requirements-dev.txt
+++ b/src/requirements-dev.txt
@@ -6,3 +6,9 @@ black>=23.0.0
 flake8>=6.0.0
 pre-commit>=3.3.0
 mypy>=1.4.0
+# Web UI testing dependencies
+selenium>=4.22.0
+pytest-selenium>=4.1.0
+pytest-html>=4.0.0
+webdriver-manager>=4.0.1
+requests>=2.26.0
