--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,17 @@
 [tool:pytest]
 testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-addopts = --verbose --tb=short
-asyncio_mode = auto
+addopts = 
+    --strict-markers
+    --strict-config
+    --verbose
+    --tb=short
+    --html=tests/reports/report.html
+    --self-contained-html
+markers =
+    selenium: marks tests as selenium tests (deselect with '-m "not selenium"')
+    integration: marks tests as integration tests
+    unit: marks tests as unit tests
+    slow: marks tests as slow running
+filterwarnings =
+    ignore::UserWarning
+    ignore::DeprecationWarning
