--- a/pytest.ini
+++ b/pytest.ini
@@ -7,6 +7,8 @@ addopts =
     --tb=short
     --html=tests/reports/report.html
     --self-contained-html
+asyncio_default_fixture_loop_scope = function
+asyncio_mode = auto
 markers =
     selenium: marks tests as selenium tests (deselect with '-m "not selenium"')
     integration: marks tests as integration tests
@@ -15,3 +17,4 @@ markers =
 filterwarnings =
     ignore::UserWarning
     ignore::DeprecationWarning
+    ignore::pytest.PytestDeprecationWarning
