--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,3 +16,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 aiofiles>=23.2.0
 pydantic>=2.5.0
+# MongoDB dependencies
+motor>=3.3.0
+pymongo>=4.6.0
+beanie>=1.24.0
