--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,7 +16,7 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 aiofiles>=23.2.0
 pydantic>=2.5.0
-# MongoDB dependencies
+# MongoDB dependencies (Phase 4)
 motor>=3.3.0
 pymongo>=4.6.0
-beanie>=1.24.0
+bson>=0.5.10
