Implement complete end-to-end CLI pipeline for Storybench LLM
- Add GPT-4o model to configuration
- Create run_end_to_end.py script for complete pipeline workflow
- Fix evaluator setup and response generation issues
- Resolve Pydantic validation errors for Response model
- Add proper error handling and progress reporting
- Support both response generation and auto-evaluation modes
- Export comprehensive results to timestamped JSON files

Features:
- Generate responses from any configured model
- Store responses in MongoDB with proper validation
- Run LLM evaluations using GPT-4 with stringent criteria
- Filter by models and sequences for targeted testing
- Resume incomplete evaluations automatically
- Generate performance summaries and detailed reports

Usage:
python3 run_end_to_end.py --models 'GPT-4o' --sequences 'FilmNarrative' --auto-evaluate

--- a/config/models.yaml
+++ b/config/models.yaml
@@ -7,10 +7,10 @@ global_settings:
 
 models:
   # API Models
-  # - name: "GPT-4"
-  #   type: "api"
-  #   provider: "openai"
-  #   model_name: "gpt-4"
+  - name: "GPT-4o"
+    type: "api"
+    provider: "openai"
+    model_name: "gpt-4o"
     
   - name: "Claude-4-Sonnet"
     type: "api"
