feat: Complete web UI enhancements and database integration
Major Features Added:
✅ Global Settings Updates
- Updated defaults: temperature 1.0, max_tokens 8192
- Added proper save functionality with validation
- Enhanced input validation and success messages

✅ API Keys Management
- Migrated API keys from .env to encrypted database storage
- Added Fernet encryption for secure key storage
- Implemented full CRUD operations for API providers
- Added API key testing functionality
- Added ability to add/remove custom providers

✅ Models Management
- Enhanced frontend with full CRUD operations
- Added modal for adding/editing models
- Connected to database storage instead of files

✅ Results Page Database Integration
- Created DatabaseResultsService for MongoDB integration
- Updated results API to query database instead of files
- Enhanced results display with proper data structure

✅ Evaluation Criteria Page
- Added new CriteriaConfig.vue page (read-only)
- Created criteria API endpoints
- Updated navigation to include criteria page
- Connected to database for criteria display

✅ Infrastructure Improvements
- Added cryptography dependency for encryption
- Updated database models with GlobalSettings support
- Created encryption utilities with proper key management
- Enhanced API endpoints with better error handling
- Fixed frontend template syntax issues

✅ Security & Data Management
- Encrypted API key storage in database
- Proper encryption key management via environment
- Maintained MongoDB connection string in .env for security
- Added proper input validation throughout

Technical Details:
- All API endpoints tested and functional
- Frontend builds successfully without errors
- Database integration working with MongoDB Atlas
- Proper error handling and user feedback
- Enhanced navigation and user experience

This update completes the web UI enhancement requirements with:
- Working global settings with correct defaults
- Secure API key management
- Full model configu

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,9 @@ GOOGLE_API_KEY=your_google_key_here
 QWEN_API_KEY=your_qwen_key_here
 AI21_API_KEY=your_ai21_key_here
 
+# Encryption key for storing API keys in database (generate a random 32-byte key)
+ENCRYPTION_KEY=your_32_byte_encryption_key_here
+
 # MongoDB Atlas connection
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/storybench?retryWrites=true&w=majority
 MONGODB_TEST_URI=mongodb+srv://username:password@cluster.mongodb.net/storybench_test?retryWrites=true&w=majority
