--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -16,6 +16,15 @@ fastapi>=0.104.0
 uvicorn[standard]>=0.24.0
 aiofiles>=23.2.0
 pydantic>=2.5.0
+# LangChain dependencies (Phase 2)
+langchain>=0.1.0
+langchain-community>=0.0.20
+langchain-core>=0.1.0
+langchain-experimental>=0.0.50
+# For local model integration
+langchain-llama-cpp>=0.0.1
+# For token text splitting
+tiktoken>=0.9.0
 # MongoDB dependencies (Phase 4)
 motor>=3.3.0
 pymongo>=4.6.0
