Add DeepInfra provider integration with DeepSeek-R1 support
- Add DeepInfra provider to APIEvaluator with OpenAI-compatible API
- Support for DeepSeek-R1 model with 128K context window
- Add DeepInfra API key environment variable
- Update validation services to support DeepInfra connectivity testing
- Add production test script for DeepInfra workflow validation
- Update README with DeepInfra integration details and examples
- Successfully tested generation and evaluation workflows

Features:
- Full generation and evaluation pipeline working
- Context management and error handling implemented
- Production-ready with proper exception handling
- Integrated with existing validation and testing infrastructure

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ ANTHROPIC_API_KEY=your_anthropic_key_here
 GOOGLE_API_KEY=your_google_key_here
 QWEN_API_KEY=your_qwen_key_here
 AI21_API_KEY=your_ai21_key_here
+DEEPINFRA_API_KEY=your_deepinfra_key_here
 
 # Encryption key for storing API keys in database (generate a random 32-byte key)
 ENCRYPTION_KEY=your_32_byte_encryption_key_here
