--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,34 @@
-# API Keys
-OPENAI_API_KEY=your_openai_key_here
-ANTHROPIC_API_KEY=your_anthropic_key_here
-GOOGLE_API_KEY=your_google_key_here
-QWEN_API_KEY=your_qwen_key_here
-AI21_API_KEY=your_ai21_key_here
-DEEPINFRA_API_KEY=your_deepinfra_key_here
+# StoryBench Environment Variables
+# Copy this file to .env and fill in your API keys
 
-# Encryption key for storing API keys in database (generate a random 32-byte key)
-ENCRYPTION_KEY=your_32_byte_encryption_key_here
+# MongoDB Connection
+MONGODB_URI=mongodb://localhost:27017
+# For MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/
 
-# MongoDB Atlas connection
-MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/storybench?retryWrites=true&w=majority
-MONGODB_TEST_URI=mongodb+srv://username:password@cluster.mongodb.net/storybench_test?retryWrites=true&w=majority
+# Directus CMS (for prompt and criteria management)
+DIRECTUS_URL=https://your-directus-instance.com
+DIRECTUS_TOKEN=your-directus-token
 
-# Optional: Custom base URLs
-GROK_BASE_URL=https://api.x.ai/v1
+# LLM Provider API Keys
+OPENAI_API_KEY=sk-...
+ANTHROPIC_API_KEY=sk-ant-...
+GOOGLE_API_KEY=AIza...
+DEEPINFRA_API_KEY=...
+
+# Optional: Specific project/location for Google Vertex AI
+# GOOGLE_PROJECT_ID=your-project-id
+# GOOGLE_LOCATION=us-central1
+
+# Optional: Email notifications
+# SMTP_SERVER=smtp.gmail.com
+# SMTP_PORT=587
+# SMTP_USERNAME=your-email@gmail.com
+# SMTP_PASSWORD=your-app-password
+# NOTIFICATION_EMAIL=admin@example.com
+
+# Optional: Webhook notifications (Slack, Discord, etc)
+# WEBHOOK_URL=https://hooks.slack.com/services/YOUR/WEBHOOK/URL
+
+# Development settings
+# LOG_LEVEL=INFO
+# DEBUG=false
