Update gitignore to exclude evaluation scripts
- Add patterns for evaluate_qvq_*.py and similar one-time evaluation scripts
- These are typically task-specific scripts not meant for version control

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,8 @@ tests/reports/
 
 # Documentation
 docs/_build/
+
+# Evaluation scripts for specific tasks (usually one-time use)
+evaluate_qvq_*.py
+evaluate_*_responses.py
+*_evaluation_*.py
